test/compile-errors/extern-type-errors.crow
main void()
	()

a extern

r record
	a a

b[t] extern
